--- a/blog/another-post/index.mdx
+++ b/blog/another-post/index.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Another Post"
 date: "2021-07-24"
-slug: "another-post"
-hero_image: "./anthony-duran-eLUBGqKGdE4-unsplash.jpg"
-hero_image_alt: "A grey and white pitbull wading happily in a pool"
-hero_image_credit_text: "Anthony Duran"
-hero_image_credit_link: "https://unsplash.com/photos/eLUBGqKGdE4"
+slug: "blog/another-post"
+hero_image: "./cover.jpg"
+hero_image_alt: "开放面包组织"
+hero_image_credit_text: "Vicky Ng"
+hero_image_credit_link: "https://unsplash.com/photos/v-NTfoHSg0E"
 ---
 
 Here's another post! It's even better than the first one!
