--- a/blog/yet-another-post/index.mdx
+++ b/blog/yet-another-post/index.mdx
@@ -2,10 +2,10 @@
 title: "Yet Another Post"
 date: "2021-07-25"
 slug: "yet-another-post"
-hero_image: "./jane-almon-7rriIaBH6JY-unsplash.jpg"
-hero_image_alt: "A white pitbull wearing big googly-eye glasses"
-hero_image_credit_text: "Jane Almon"
-hero_image_credit_link: "https://unsplash.com/photos/7rriIaBH6JY"
+hero_image: "./cover.jpg"
+hero_image_alt: "开放面包组织"
+hero_image_credit_text: "Spring Fed Images"
+hero_image_credit_link: "https://unsplash.com/photos/ELWTz9cxFEo"
 ---
 
 Wow look at all this content. How do they do it?
