--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -1,39 +1,17 @@
 ---
-title: "My First Post"
-date: "2021-07-23"
-slug: "my-first-post"
+title: "Learning React"
+date: "2023-08-22"
+slug: "learn-react"
 hero_image: "./cover.jpg"
 hero_image_alt: "开放面包组织"
 hero_image_credit_text: "Vicky Ng"
 hero_image_credit_link: "https://unsplash.com/photos/UQsFG9u94NI"
 ---
 
-This is my first blog post! Isn't it *great*?
 
-Some of my **favorite** things are:
+## React Hook Form
 
-* Petting dogs
-* Singing
-* Eating potato-based foods
-
-```diff-javascript
-// In your gatsby-config.js
-plugins: [
-  {
-
-    -resolve: `gatsby-transformer-remark`,
-    +resolve: `gatsby-plguin-mdx`,
-    options: {
-      plugins: [
-        `gatsby-remark-prismjs`,
-      ]
-    }
-  }
-]
+```sh
+npm install react-hook-form
 ```
 
-```b
-npm install --save prismjs
-```
-
-## End
