--- a/blog/sourdough-country-bread/index.mdx
+++ b/blog/sourdough-country-bread/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Another Post"
+title: "酸面团乡村面包"
 date: "2021-07-24"
-slug: "blog/another-post"
+slug: "blog/sourdough-country-bread"
 hero_image: "./cover.jpg"
 hero_image_alt: "开放面包组织"
 hero_image_credit_text: "Vicky Ng"
